--- a/style.css
+++ b/style.css
@@ -1,7 +1,48 @@
+html, body{
+    margin: 0px;
+    padding: 0px;
+}
+.topBar{
+display: flex;
+align-items: center;
+justify-content: center;
+height: 30px;
+margin: 0px;
+padding: 0;
+border: 0;
+background-color: black;
+color: white;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.pageName{
+display: flex;
+align-items: center;
+justify-content: center;
+margin: 0px;
+padding: 0px;
+height: 70px;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+font-size: 25px;
+font-weight: bolder;
+letter-spacing: 8px;
+border-bottom: 1px;
+border-color: rgb(237, 237, 237);
+border-bottom-style: groove;
+}
+.menuBar{
+border-bottom:rgb(188, 188, 188);
+border-width: 1px;
+border-bottom-style: groove;
+}
 .bookSection{
 display: flex;
 flex-direction: column;
-width: 400px;
+width: 1000px;
+margin: auto;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+font-size: larger;
+font-weight: bold;
+letter-spacing: 1px;
 }
 .subtitle{
 display: flex;
@@ -13,17 +54,17 @@ align-items: center;
 display: flex;
 flex-direction: row;
 justify-content: flex-start;
-width: 400px;
+width: 1000px;
 overflow-x:scroll;
 }
 .book{
 display: flex;
 flex-direction: column;
-width: 100px;
-margin-right: 16px;
+margin-right: 30px;
+font-size: medium;
 }
 .bookImage{
-width: 100px;
-height: 150px;
+width: 140px;
+height: 210px;
 background-color: aliceblue
 }
