--- a/style.css
+++ b/style.css
@@ -34,15 +34,80 @@ border-bottom:rgb(188, 188, 188);
 border-width: 1px;
 border-bottom-style: groove;
 }
+.readingArea{
+display: flex;
+flex-direction: row;
+height: 250px;
+width: 550px;
+margin-right: 15px;
+border-radius: 15px;
+background-color: rgb(223, 233, 233);
+}
+.reading{
+display: flex;
+flex-direction: row;
+}
+.readingBookImageArea{
+width: 160px;
+height: 100%;
+display:flex;
+align-items: center;
+}
+.readingBookImage{
+margin-left: 20px;
+width: 140px;
+height: 210px;
+background-color:blue;
+}
+.readingBookInfo{
+display: flex;
+flex-direction: column;
+margin-left: 20px;
+margin-top: 20px;
+}
+.readingBookTitle{
+margin-bottom: 0;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+text-align: justify;
+}
+.readingBookAuthor{
+font-weight:lighter;
+margin-top: 0;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+text-align: justify;
+}
+.progressBarContainer{
+margin-top: 25px;
+width: 265px;
+height: 3px;
+background-color: rgb(192, 192, 192);
+}
+.progressBar{
+height: 100%;
+width: 70%; /* Define a porcentagem preenchida */
+background-color: #e56a6a;
+transition: width 0.5s ease; /* Transição suave */
+}
+.button{
+margin-top: 20px;
+height: 40px;
+width: 265px;
+}
 .bookSection{
 display: flex;
 flex-direction: column;
 width: 1000px;
+height: 360px;
 margin: auto;
+margin-top: 0;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 font-size: larger;
 font-weight: bold;
-letter-spacing: 1px;
+letter-spacing: 1px;;
 }
 .subtitle{
 display: flex;
@@ -56,6 +121,7 @@ flex-direction: row;
 justify-content: flex-start;
 width: 1000px;
 overflow-x:scroll;
+;
 }
 .book{
 display: flex;
@@ -67,4 +133,22 @@ font-size: medium;
 width: 140px;
 height: 210px;
 background-color: aliceblue
+}
+.bookInfo{
+width: 140px;
+}
+.bookTitle{
+margin-bottom: 0;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+text-align: justify;
+}
+.bookAuthor{
+font-weight:lighter;
+margin-top: 0;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+text-align: justify;
 }
